# cppCalculator

./: CMakeLists.txt  Calculation.cpp  Calculation.h  README.md  calcwindow.cpp  calcwindow.h  calcwindow.ui  main.cpp  ~$бораторна робота ООП №2.8.docx  Лабораторна робота ООП №2.8.docx
